<resources>
    <string name="app_name">TwitSplit</string>

    <string name="com.twitter.sdk.android.CONSUMER_KEY">qRvEm46du5uQFo2YeACAb8YwD</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">ubyhzSLlfZCZMY6QfTOpiRsYBUxFqfgDvLYF8YyAtYOFssNZD3</string>

    <string name="button_error">Oops!</string>
    <string name="button_ok">OK</string>

    <string name="dialog_processing_message">We\'re working on it...</string>
    <string name="dialog_twitter_token_error">We can\'t connect to twitter service, please check your internet connection and try again.</string>

    <string name="twit_hub_title">Your twits</string>
    <string name="twit_hub_logout">Logout</string>
    <string name="twit_hub_add_new_twit_confirm_message">Click Twitter button again to post a message</string>
    <string name="twit_hub_empty">You have no tweet. Make one by tap on twitter button bellow!</string>

    <string name="add_new_twit_title">Post new twit</string>
    <string name="add_new_twit_hint">Twit content</string>
    <string name="add_new_twit_post_button">Post</string>
    <string name="add_new_twit_cancel_button">Cancel</string>
    <string name="add_new_twit_error_input_empty">Your message can not be empty</string>
    <string name="add_new_twit_error_input_invalid">Your message contain a non-spacing word that greater than 50 characters</string>

    <string name="auth_try_demonstration_button">Try our demonstration without Twitter account</string>
    <string name="auth_demonstration_message">In this mode, you will got a full experience but everything is just simulation. You won\'t able to affect to any twitter account.\nAre you ready for it?</string>
    <string name="auth_back_button">Back</string>
    <string name="auth_swipe_up_to_continue_button">Swipe up to continue</string>
</resources>
