<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/simulation"
        android:tint="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/tv_main_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/auth_demonstration_message"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:padding="20dp"
        />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_swipe_up_to_continue_button"
        android:background="@android:color/transparent"
        android:textColor="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        />

    <View
        android:id="@+id/swipe_indicator"
        android:layout_above="@id/btn_continue"
        android:layout_width="1dp"
        android:layout_height="100dp"
        android:layout_marginBottom="50dp"
        android:background="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_back_button"
        android:background="@android:color/transparent"
        android:textColor="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>